added missing : in local translation text

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -5,7 +5,7 @@
     "firstParagraph": "The goal of the community is to connect Israeli developers",
     "secondParagraph": "who are interested in contributing to open source, with Israeli open source libraries.",
     "thirdParagraph": "Full details about the community can be found",
-    "fourthParagraph": "on the community's temporary website",
+    "fourthParagraph": "on the community's temporary website:",
     "discordLink": "Click here for the temporary website"
   },
   "Metadata": {
