--- a/public/locales/he.json
+++ b/public/locales/he.json
@@ -5,7 +5,7 @@
     "firstParagraph": "מטרת הקהילה היא חיבור בין מפתחים ישראלים",
     "secondParagraph": " המעוניינים לתרום לקוד פתוח, ובין ספריות קוד פתוח ישראליות.",
     "thirdParagraph": "פרטים מלאים על הקהילה ניתן למצוא ",
-    "fourthParagraph": "באתר הזמני של הקהילה",
+    "fourthParagraph": "באתר הזמני של הקהילה:",
     "discordLink": "לחצו כאן למעבר לאתר הקהילה הזמני"
   },
   "Metadata": {
